--- a/ML_Project.ipynb
+++ b/ML_Project.ipynb
@@ -1392,11 +1392,11 @@
         "pip install catboost"
       ],
       "metadata": {
-        "id": "WdnGhFl7q4Vo",
-        "outputId": "a5332aa9-fd80-4cb5-f32d-b4d6d76e2208",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WdnGhFl7q4Vo",
+        "outputId": "a5332aa9-fd80-4cb5-f32d-b4d6d76e2208"
       },
       "execution_count": 27,
       "outputs": [
@@ -1492,13 +1492,13 @@
         "# 6. CatBoost Model Training\n",
         "# ==============================\n",
         "cat_model = CatBoostClassifier(\n",
-        "    iterations=500,          # จำนวนรอบการเรียนรู้\n",
+        "    iterations=5,          # จำนวนรอบการเรียนรู้\n",
         "    learning_rate=0.05,      # อัตราการเรียนรู้\n",
-        "    depth=6,                 # ความลึกของต้นไม้\n",
+        "    depth=5,                 # ความลึกของต้นไม้\n",
         "    loss_function='Logloss', # ใช้สำหรับ classification\n",
         "    eval_metric='Accuracy',\n",
         "    random_seed=42,\n",
-        "    verbose=100              # แสดงผลทุก 100 รอบ\n",
+        "    verbose=1             # แสดงผลทุก 100 รอบ\n",
         ")\n",
         "\n",
         "print(\"\\nกำลังฝึกสอนโมเดล CatBoost...\")\n",
@@ -1541,13 +1541,13 @@
         ""
       ],
       "metadata": {
-        "id": "xUqxLMIGqww6",
-        "outputId": "63dd38f7-e9fc-4764-ccb1-4aa2ef1cb178",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xUqxLMIGqww6",
+        "outputId": "76230128-b1de-4f93-f358-92302020221a"
       },
-      "execution_count": 29,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1560,17 +1560,16 @@
             "TF-IDF Train Shape: (100, 2616)\n",
             "\n",
             "กำลังฝึกสอนโมเดล CatBoost...\n",
-            "0:\tlearn: 0.9375000\ttest: 0.9000000\tbest: 0.9000000 (0)\ttotal: 51.4ms\tremaining: 25.6s\n",
-            "100:\tlearn: 1.0000000\ttest: 1.0000000\tbest: 1.0000000 (2)\ttotal: 4.03s\tremaining: 15.9s\n",
-            "200:\tlearn: 1.0000000\ttest: 0.9500000\tbest: 1.0000000 (2)\ttotal: 7.16s\tremaining: 10.6s\n",
-            "300:\tlearn: 1.0000000\ttest: 0.9500000\tbest: 1.0000000 (2)\ttotal: 9.82s\tremaining: 6.49s\n",
-            "400:\tlearn: 1.0000000\ttest: 0.9500000\tbest: 1.0000000 (2)\ttotal: 11.9s\tremaining: 2.95s\n",
-            "499:\tlearn: 1.0000000\ttest: 0.9500000\tbest: 1.0000000 (2)\ttotal: 14.6s\tremaining: 0us\n",
+            "0:\tlearn: 0.9375000\ttest: 1.0000000\tbest: 1.0000000 (0)\ttotal: 44.4ms\tremaining: 178ms\n",
+            "1:\tlearn: 0.9625000\ttest: 1.0000000\tbest: 1.0000000 (0)\ttotal: 95.8ms\tremaining: 144ms\n",
+            "2:\tlearn: 0.9750000\ttest: 0.9500000\tbest: 1.0000000 (0)\ttotal: 147ms\tremaining: 98.2ms\n",
+            "3:\tlearn: 0.9750000\ttest: 1.0000000\tbest: 1.0000000 (0)\ttotal: 172ms\tremaining: 42.9ms\n",
+            "4:\tlearn: 0.9750000\ttest: 0.9500000\tbest: 1.0000000 (0)\ttotal: 204ms\tremaining: 0us\n",
             "\n",
             "bestTest = 1\n",
-            "bestIteration = 2\n",
+            "bestIteration = 0\n",
             "\n",
-            "Shrink model to first 3 iterations.\n",
+            "Shrink model to first 1 iterations.\n",
             "ฝึกสอนเสร็จสิ้น!\n",
             "\n",
             "Validation Accuracy: 1.0\n",
